--- a/part2/leafet.html
+++ b/part2/leafet.html
@@ -37,7 +37,7 @@
     
 </head>
 <body>
-    <h1>Leafet Bicing Barcelona</h1>
+    <h1>Leaflet Bicing Barcelona</h1>
     <div id="map"></div>
     <script src="./adria_vallejo_proanyo.js"></script>
 
